<resources>
    <string name="app_name">Where In The World</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="where_in_the_world">Where in the World</string>
    <string name="start_game">Start Game</string>
    <string name="toggle_map_size">Toggle map size</string>
    <string name="end_game">End game</string>
    <string name="back_to_home">Back to Home</string>
    <string name="history">History</string>
    <string name="no_data_availible">No data availible</string>
    <string name="total_points">Total Points: %d</string>
    <string name="share_map">Share Map</string>
    <string name="game_overview">Game Overview</string>

</resources>