<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.GameActivity">

    <!-- FrameLayout to overlay game-end message -->
    <FrameLayout
        android:id="@+id/streetViewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Street View Fragment -->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/streetView"
            android:name="com.google.android.gms.maps.SupportStreetViewPanoramaFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/gameEndLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top|center_horizontal"
            android:visibility="gone"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/endGameOverview"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/game_overview"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/gameEndMessage"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/backToHomeButton"
                    android:text="@string/back_to_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp" />

                <Button
                    android:id="@+id/shareMapButton"
                    android:text="@string/share_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <!-- Map Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/mapContainer"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="6dp"
        android:clipChildren="true"
        android:clipToPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Google Map Fragment -->
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- Toggle Map Size Button -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/toggleMapSizeButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/toggle_map_size"
                android:src="@android:drawable/ic_menu_zoom"
                app:backgroundTint="@color/white"
                app:maxImageSize="32dp"
                android:scaleType="fitCenter"
                app:useCompatPadding="false"
                android:padding="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="8dp" />

            <!-- End Game Button -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/endGameButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/end_game"
                android:src="@android:drawable/gallery_thumb"
                app:backgroundTint="@color/green"
                app:maxImageSize="32dp"
                android:scaleType="fitCenter"
                app:useCompatPadding="false"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
